seperate css from html

--- a/main.html
+++ b/main.html
@@ -1,81 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <title>A1-PokémonAPI</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="myscripts.js"></script>
-
-    <style>
-        #outer {
-            display: flex;
-            flex-direction: column;
-        }
-
-        body {
-            margin: 0px;
-            padding: 0%;
-            background-color: #fefbd8;
-        }
-
-        header {
-            text-align: center;
-            color: black;
-            background-color: #fefbd8;
-
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #92a8d1;
-            padding: 14px 16px;
-        }
-
-        main {
-            /* margin-bottom: 30px; */
-            gap: 10px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-content: space-around;
-            padding: 10px;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        img {
-            border-radius: 5px;
-            width: 50%;
-        }
-
-        .images_group {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        footer {
-            text-align: center;
-            color: rgb(151, 148, 148);
-        }
-
-        .image_container {
-            text-align: center;
-            background-color:  #eee;
-            padding: 20px;
-            margin: 10px;
-            border-radius: 20px;
-        }
-
-        .image_container img {
-            margin-top: 20px;
-            max-width: 90%;
-        }
-
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="mycss.css">
 </head>
 
 <body>
