Add js for search and background color

--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,19 @@
 
         <nav>
             <input id="text" type="text" value="" style="Width:20%" placeholder="Search by name..." />
-            <select name="text" id="textType">
-                <option value="name">By name</option>
-                <option value="type">By type</option>
-                <option value="height">By height</option>
-            </select>
+            <select name="poke_type" id="poke_type">
+                <option value="random">random</option>
+                <option value="grass">grass</option>
+                <option value="electric">electric</option>
+                <option value="water">water</option>
+                <option value="bug">bug</option>
+                <option value="fire">fire</option>
+              </select>
             <button>Search</button>
         </nav>
 
         <main>
-
-
         </main>
-
-
 
         <footer>
             <h5>
@@ -43,5 +42,4 @@
     </div>
 
 </body>
-
 </html>
