Add next page button

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         <main>
         </main>
 
+
+        <button class="btn warning" onclick = "send()">Next Page</button>
+
+
         <footer>
             <h5>
                 PokeAPI-client © LeoLi 2022
