--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
         </header>
 
         <nav>
-            <input id="text" type="text" value="" style="Width:20%" placeholder="Search by name..." />
+            <input id="search" type="search" style="Width:30%;" placeholder="Search by name ..." />
+            <br/>
+            <div>
+            <div style="font-weight: bold;">Type</div>
             <select name="poke_type" id="poke_type">
                 <option value="random">random</option>
                 <option value="grass">grass</option>
@@ -27,10 +30,13 @@
                 <option value="bug">bug</option>
                 <option value="fire">fire</option>
               </select>
-            <button>Search</button>
+            </div>
+
+
         </nav>
 
         <main>
+
         </main>
 
 
