Add search by id

--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,33 @@
             <input id="search" type="search" style="Width:30%;" placeholder="Search by name ..." />
             <br/>
             <div>
-            <div style="font-weight: bold;">Type</div>
-            <select name="poke_type" id="poke_type">
-                <option value="random">random</option>
-                <option value="grass">grass</option>
-                <option value="electric">electric</option>
-                <option value="water">water</option>
-                <option value="bug">bug</option>
-                <option value="fire">fire</option>
-              </select>
+                <div style="font-weight: bold;">Id</div>
+                <select name="poke_id" id="poke_id">
+                    <option value="0">All</option>
+                    <option value="1">1-200</option>
+                    <option value="2">201-400</option>
+                    <option value="3">401-600</option>
+                    <option value="4">601-898</option>
+                  </select>
+            </div>
+            <br>
+            <div>
+                <div style="font-weight: bold;">Type</div>
+                <select name="poke_type" id="poke_type">
+                    <option value="random">random</option>
+                    <option value="grass">grass</option>
+                    <option value="electric">electric</option>
+                    <option value="water">water</option>
+                    <option value="bug">bug</option>
+                    <option value="fire">fire</option>
+                </select>
             </div>
 
 
         </nav>
 
         <main>
+            <p>aa</p>
 
         </main>
 
