--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
         <nav>
             <input id="search" type="search" style="Width:30%;" placeholder="Search by name ..." />
+            <!-- <div class="history">History:</div> -->
             <br/>
             <div>
                 <div style="font-weight: bold;">Id</div>
