modify search bar

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 
         <nav>
             <input id="search" type="search" style="Width:30%;" placeholder="Search by name ..." />
-            <!-- <div class="history">History:</div> -->
+            <button onclick = "history()">Search</button>
+            <div class="history">History:</div>
             <br/>
             <div>
                 <div style="font-weight: bold;">Id</div>
