Create my own server

--- a/public/timeline.html
+++ b/public/timeline.html
@@ -8,6 +8,23 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="timeline.js"></script>
+    <style>
+        body {
+            background-color: wheat;
+        }
+        h1 {
+            display: flex;
+            justify-content: center;
+            padding-top: 30px;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            align-content: space-between;
+
+        }
+
+    </style>
 
 </head>
 <body>
