--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -13,6 +13,8 @@
         body {
             background-color: wheat;
             font-family: 'BioRhyme', serif;
+            display: flex;
+            flex-direction: column;
         }
         h1 {
             display: flex;
@@ -21,14 +23,74 @@
         }
         main {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-content: space-between;
+            justify-content: space-around;
 
         }
 
         #info {
             display: flex;
             flex-direction: column;
+        }
+
+        .btn {
+            background: none;
+            text-decoration: none;
+            color: black;
+            box-shadow: 0px 0px 0px 2px rgb(156, 224, 231);
+            border-radius: 3px;
+            padding: 5px 2em;
+            transition: 0.5s;
+        }
+
+        .btn:hover {
+            background: gray;
+            color: white;
+            transition: 0.5s;
+        }
+
+        #nav2 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+
+        #info {
+            border-style: double;
+            border-width: thick;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+
+        #timelines {
+            border-style: double;
+            border-width: thick;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+
+        .a {
+            text-align: center;
+            color: rgb(32, 49, 72);
+            font-size: xx-large;
+        }
+
+        .box0 {
+            text-align: center;
+            background-color:  rgb(150, 221, 173);
+            padding: 10px;
+            margin: 10px;
+            border-radius: 20px;
+        }
+
+        @media screen and (max-width: 900px) {
+            main{
+                flex-direction: column;
+                align-content: space-around;
+            }
+
+
         }
 
     </style>
@@ -38,14 +100,25 @@
     <h1>
         Welcome to your Profile page!
     </h1>
-    <button class="btn" id="back"><span class="material-icons">Back to main page</span></button>
-    <button class="btn" id="logout"><span class="material-icons">logout</span></button>
+    <div id="nav2">
+        <button class="btn" id="back"><span class="material-icons">Back to main page</span></button>
+        <button class="btn" id="logout"><span class="material-icons">logout</span></button>
+    </div>
+    <br>
 
     <main>
         <div id="info">
-            <h2>Basic Info</h2>
-            <h4 id="name"></h4>
-            
+            <h2 class="a">Basic Info</h2>
+            <div id="name"></div>
+            <br>
+        </div>
+        <br>
+        <div id="timelines">
+            <h2 class="a">Timelines</h2>
+            <div id="content">
+
+            </div>
+            <br>
         </div>
 
     </main>
