--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -19,6 +19,7 @@
         </header>
         <div id="nav2">
             <button onclick = "Gologin()" class="button">Account</button>
+            <button onclick = "Gogame()" class="button">Game</button>
             <button onclick = "Gocart()" class="button">Your Cart</button>
         </div>
         <br>
