Add function and button for Player can choose the number of Pokémons in game's grid

--- a/public/pages/game.html
+++ b/public/pages/game.html
@@ -52,7 +52,7 @@
         }
 
         .select {
-            padding-top: 9%;
+            padding-top: 11%;
         }
 
         .start {
@@ -169,7 +169,7 @@
     <nav>
         <div class="tog">
             <div>
-                <h4>Select your Grid: </h4>
+                <h4>Select Grid: </h4>
             </div>
             <div class="select">
                 <select name="grid_type" id="grid_type">
@@ -181,13 +181,25 @@
         </div>
         <div class="tog">
             <div>
-                <h4>Select game Level: </h4>
+                <h4>Select Level: </h4>
             </div>
             <div class="select">
                 <select name="level_type" id="level_type">
                     <option value="easy">easy</option>
                     <option value="medium">medium</option>
                     <option value="hard">hard</option>
+                </select>
+            </div>
+        </div>
+        <div class="tog">
+            <div>
+                <h4>Choose PokeNum:</h4>
+            </div>
+            <div class="select">
+                <select name="level_type" id="pokenum_type">
+                    <option value="max">max</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
                 </select>
             </div>
         </div>
