--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -84,6 +84,18 @@
             border-radius: 20px;
         }
 
+        .boxgame {
+            text-align: center;
+            background-color:  rgb(201, 147, 124);
+            padding: 10px;
+            margin: 10px;
+            border-radius: 20px;
+        }
+
+        h4 {
+            font-weight: bold;
+        }
+
         @media screen and (max-width: 900px) {
             main{
                 flex-direction: column;
