finish admin login

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -163,6 +163,14 @@
             </div>
             <br>
         </div>
+        <br>
+        <div class="info">
+            <h3 class="a">Create Admin Account</h3>
+            <div id="adminlogin">
+                <div>aa</div>
+            </div>
+            <br>
+        </div>
 
     </main>
     <script src="../js/dashborad.js"></script>
